--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -88,7 +88,7 @@
       <paper-radio-group id="mode" selected="{{mode}}">
         <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button>
         <paper-radio-button id="volumeButton" name="volume" class="flex">Volume</paper-radio-button>
-        <paper-radio-button id="averagingButton" name="averaging" class="flex">Comfort</paper-radio-button>
+        <paper-radio-button id="averagingButton" name="averaging" class="flex">Pleasantness</paper-radio-button>
         <paper-radio-button id="targetButton" name="target" class="flex">Target</paper-radio-button>
         <paper-radio-button id="equalizerButton" name="equalizer" class="flex">Equalizer</paper-radio-button>
         <paper-radio-button id="pagingButton" name="paging" class="flex">Paging</paper-radio-button>
