--- a/software/src/omaha/templates/components/zones/zone-map-controller.html
+++ b/software/src/omaha/templates/components/zones/zone-map-controller.html
@@ -442,7 +442,7 @@
 
           // make something that removes them from the animation here when you feel like it
 
-          selectedFeatures.clear();
+          //selectedFeatures.clear();
           //infoBox.innerHTML = '&nbsp;';
         });
         map.on('click', function() {
